--- a/week1.html
+++ b/week1.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" type="text/css" href="week1.css">
 </head>
 <body>
+	<div class="header">
+		<h1>About Accra</h1></div>
+	<div>
 	<div>
 		<h1>Estee's Ice Cream Parlor Review</h1></div>
 	<div>
